--- a/Toy-Language-Lexer/Makefile
+++ b/Toy-Language-Lexer/Makefile
@@ -1,7 +1,11 @@
-tc-%: 
+name := $(MAKECMDGOALS)
+
+.PHONY: all $(name) clean
+
+$(name):
 	flex la.l
 	gcc ./lex.yy.c
-	./a.exe < ./public$*.335
+	./a.exe < $@
 
 clean : 
 	rm -f ./lex.yy.c output.csv ./a.exe
