--- a/Java-Lexer/Makefile
+++ b/Java-Lexer/Makefile
@@ -1,7 +1,11 @@
-tc-%: 
+name := $(MAKECMDGOALS)
+
+.PHONY: all $(name)
+
+$(name):
 	flex la.l
 	gcc ./lex.yy.c
-	./a.exe < ./test_25.java
+	./a.exe < $@
 
 clean : 
 	rm -f ./lex.yy.c output.csv ./a.exe
