--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "iostream": "cpp",
         "stdlib.h": "c",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "*.tcc": "c"
     }
 }
