--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,11 @@
         "iostream": "cpp",
         "stdlib.h": "c",
         "iosfwd": "cpp",
-        "*.tcc": "c"
+        "*.tcc": "c",
+        "array": "c",
+        "bitset": "c",
+        "initializer_list": "c",
+        "utility": "c",
+        "new": "cpp"
     }
 }
