--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 all:
 	bison -d parser.y
 	flex scanner.l
-	g++ -std=c++17 lex.yy.c parser.tab.c ast.cpp helper.cpp symtab.cpp expression.cpp 3ac.cpp -o ASTGenerator
+	g++ lex.yy.c parser.tab.c ast.cpp helper.cpp symtab.cpp expression.cpp 3ac.cpp -o ASTGenerator
 
 clean:
 	rm -f lex.yy.c parser.tab.c parser.tab.h parser.output ASTGenerator *.svg *.dot output/*.csv
