array expression supported

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "valarray": "cpp",
-        "ast.h": "c"
+        "ast.h": "c",
+        "xstring": "cpp"
     }
 }
