done push-pop param in 3ac

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,9 @@
         "utility": "cpp",
         "valarray": "cpp",
         "ast.h": "c",
-        "xstring": "cpp"
+        "xstring": "cpp",
+        "ios": "cpp",
+        "string": "cpp",
+        "xmemory": "cpp"
     }
 }
