stack manipulation for locals done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "xstring": "cpp",
         "ios": "cpp",
         "string": "cpp",
-        "xmemory": "cpp"
+        "xmemory": "cpp",
+        "xtree": "cpp"
     }
 }
